--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<div class="container">
-    <h1 class="h1">Create User</h1>
-
-    <div class="row">
-        <app-reactive-form></app-reactive-form>
-    </div>
+<div class="appContainer">
+    <app-reactive-form></app-reactive-form>
 </div>
