--- a/src/app/components/reactive-form/reactive-form.component.html
+++ b/src/app/components/reactive-form/reactive-form.component.html
@@ -1,77 +1,158 @@
-<form class="column g-5" (ngSubmit)="saveUser()" [formGroup]="userForm">
+<div class="formContainer">
 
-    <div class="col-md-6">
-        <label for="name">Name</label>
-        <input type="text" class="form-control" id="name" formControlName="name"
-            [ngClass]="userForm.get('name')?.errors?.['required']  ? 'is-invalid':'is-valid' ">
-        <div *ngIf="userForm.get('name')?.errors?.['required']" class="invalid-feedback">
-            Name is required
+    <h1 class="h1">Create User</h1>
+
+
+    <form class="formDisplay" (ngSubmit)="saveUser()" [formGroup]="userForm">
+
+        <div class="inputContainer">
+            <label for="name">Name</label>
+
+            <input type="text" class="form-control " id="name" formControlName="name" [ngClass]="userForm.get('name')?.errors?.['required'] ||
+             userForm.get('name')?.errors?.['minlength'] ||
+             userForm.get('name')?.errors?.['maxlength'] ||
+             userForm.get('name')?.errors?.['pattern'] ||
+             userForm.get('name')?.errors?.['whitespace']  ?
+            'is-invalid':'is-valid' ">
+
+            <div *ngIf="userForm.get('name')?.errors?.['required']" class="invalid-feedback">
+                Name is required
+            </div>
+            <div *ngIf="userForm.get('name')?.errors?.['minlength']" class="invalid-feedback">
+                Name is too short
+            </div>
+            <div *ngIf="userForm.get('name')?.errors?.['maxlength']" class="invalid-feedback">
+                Name is too long
+            </div>
+            <div *ngIf="userForm.get('name')?.errors?.['pattern']" class="invalid-feedback">
+                Name is invalid
+            </div>
+            <div *ngIf="userForm.get('name')?.errors?.['whitespace']" class="invalid-feedback">
+                Name is invalid
+            </div>
+        </div>
+        <div class="inputContainer">
+            <label for="lastName">Last Name</label>
+            <input type="text" class="form-control" id="lastName" formControlName="lastName" [ngClass]="userForm.get('lastName')?.errors?.['minlength'] ||
+             userForm.get('lastName')?.errors?.['minlength'] ||
+             userForm.get('lastName')?.errors?.['maxlength'] ||
+             userForm.get('lastName')?.errors?.['pattern'] ||
+             userForm.get('lastName')?.errors?.['whitespace']  ?
+            'is-invalid':'is-valid' ">
+
+            <div *ngIf="userForm.get('lastName')?.errors?.['required']" class="invalid-feedback">
+                Last name is required
+            </div>
+            <div *ngIf="userForm.get('lastName')?.errors?.['minlength']" class="invalid-feedback">
+                Last name is too short
+            </div>
+            <div *ngIf="userForm.get('lastName')?.errors?.['maxlength']" class="invalid-feedback">
+                Last name is too long
+            </div>
+            <div *ngIf="userForm.get('lastName')?.errors?.['pattern']" class="invalid-feedback">
+                Last name is invalid
+            </div>
+            <div *ngIf="userForm.get('lastName')?.errors?.['whitespace']" class="invalid-feedback">
+                Last name is invalid
+            </div>
+
+        </div>
+        <div class="inputContainer">
+            <label for="username">Username</label>
+            <input type="text" class="form-control" id="username" formControlName="username" [ngClass]="userForm.get('username')?.errors?.['required'] ||
+             userForm.get('username')?.errors?.['minlength'] ||
+             userForm.get('username')?.errors?.['maxlength'] ||
+             userForm.get('username')?.errors?.['pattern'] ||
+             userForm.get('username')?.errors?.['whitespace']  ?
+            'is-invalid':'is-valid' ">
+
+            <div *ngIf="userForm.get('username')?.errors?.['required']" class="invalid-feedback">
+                Username is required
+            </div>
+            <div *ngIf="userForm.get('username')?.errors?.['minlength']" class="invalid-feedback">
+                Username is too short
+            </div>
+            <div *ngIf="userForm.get('username')?.errors?.['maxlength']" class="invalid-feedback">
+                Username is too long
+            </div>
+            <div *ngIf="userForm.get('username')?.errors?.['whitespace']" class="invalid-feedback">
+                Username is invalid
+            </div>
+        </div>
+        <div class="inputContainer">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" id="password" formControlName="password" [ngClass]="userForm.get('password')?.errors?.['required'] ||
+             userForm.get('password')?.errors?.['minlength'] ||
+             userForm.get('password')?.errors?.['maxlength'] ||
+             userForm.get('password')?.errors?.['pattern'] ||
+             userForm.get('password')?.errors?.['whitespace']  ?
+            'is-invalid':'is-valid' ">
+
+            <div *ngIf="userForm.get('password')?.errors?.['required']" class="invalid-feedback">
+                Password is required
+            </div>
+
+            <div *ngIf="userForm.get('password')?.errors?.['minlength']" class="invalid-feedback">
+                Password is is too short
+            </div>
+            <div *ngIf="userForm.get('password')?.errors?.['maxlength']" class="invalid-feedback">
+                Password is too long
+            </div>
+            <div *ngIf="userForm.get('password')?.errors?.['whitespace']" class="invalid-feedback">
+                Password is invalid
+            </div>
+
+        </div>
+        <div class="inputContainer">
+
+
+
+            <label for="email">Email</label>
+
+            <input type="text" class="form-control" id="email" formControlName="email" [ngClass]="userForm.get('email')?.errors?.['required'] ||
+             userForm.get('email')?.errors?.['pattern'] ||
+             userForm.get('email')?.errors?.['email'] ||
+             userForm.get('email')?.errors?.['whitespace']  ?
+            'is-invalid':'is-valid' ">
+
+            <div *ngIf="userForm.get('email')?.errors?.['required']" class="invalid-feedback">
+                Email is required
+            </div>
+
+            <div *ngIf="userForm.get('email')?.errors?.['email']" class="invalid-feedback">
+                Email is invalid
+            </div>
+            <div *ngIf="userForm.get('email')?.errors?.['pattern']" class="invalid-feedback">
+                Email is invalid
+            </div>
+            <div *ngIf="userForm.get('email')?.errors?.['whitespace']" class="invalid-feedback">
+                Email is invalid
+            </div>
+        </div>
+
+        <div class="inputContainer mx-auto">
+            <button class="btn btn-primary" [disabled]="userForm.invalid" type="submit">Generate User</button>
+        </div>
+    </form>
+
+    <div class="users">
+        <div class="userContainer" *ngFor="let user of userList">
+            <div class="newUser">New User</div>
+            <div class="userImg"></div>
+            <div class="nameContainer">
+                Name : {{ user.name }}
+            </div>
+            <div class="lastNameContainer">
+                Last Name : {{ user.lastName }}
+            </div>
+            <div class="usernameContainer">
+                Username : {{ user.username }}
+            </div>
+            <div class="emailContainer">
+                Email : {{ user.email }}
+            </div>
+
         </div>
     </div>
 
-    <div class="col-md-6">
-        <label for="lastName">Last Name</label>
-        <input type="text" class="form-control" id="lastName" formControlName="lastName"
-            [ngClass]="userForm.get('lastName')?.errors?.['required']  ? 'is-invalid':'is-valid' ">
-        <div *ngIf="userForm.get('lastName')?.errors?.['required']" class="invalid-feedback">
-            Last Name is required
-        </div>
-
-    </div>
-    <div class="col-md-6">
-        <label for="username">Username</label>
-        <input type="text" class="form-control" id="username" formControlName="username"
-            [ngClass]="userForm.get('username')?.errors?.['required']  ? 'is-invalid':'is-valid' ">
-        <div *ngIf="userForm.get('username')?.errors?.['required']" class="invalid-feedback">
-            Username is required
-        </div>
-    </div>
-    <div class="col-md-6">
-        <label for="password">Password</label>
-        <input type="password" class="form-control" id="password" formControlName="password"
-            [ngClass]="userForm.get('password')?.errors?.['required']  ? 'is-invalid':'is-valid' ">
-        <div *ngIf="userForm.get('password')?.errors?.['required']" class="invalid-feedback">
-            Password is required
-        </div>
-    </div>
-    <div class="col-md-6">
-
-
-
-        <label for="email">Email</label>
-
-        <input type="text" class="form-control" id="email" formControlName="email"
-            [ngClass]="userForm.get('email')?.errors?.['required']  ? 'is-invalid':'is-valid' ">
-
-        <div *ngIf="userForm.get('email')?.errors?.['required']" class="invalid-feedback">
-            Email is required
-        </div>
-
-    </div>
-    <div class="col-md-6">
-        <label for="address">Address</label>
-        <input type="text" class="form-control" id="address" formControlName="address"
-            [ngClass]="userForm.get('address')?.errors?.['required']  ? 'is-invalid':'is-valid' ">
-        <div *ngIf="userForm.get('address')?.errors?.['required']" class="invalid-feedback">
-            Address Name is required
-        </div>
-    </div>
-    <div class="col-md-6">
-        <label for="website">Website</label>
-        <input type="text" class="form-control" id="website" formControlName="website" />
-    </div>
-
-
-    <div class="col-md-6 mx-auto">
-        <button class="btn btn-primary" type="submit">Generate User</button>
-    </div>
-
-    <div class="row">
-        <ul class="list-group">
-            <li *ngFor="let user of userList">New User : {{ user.lastName }} {{ user.name }} - {{ user.username }} - {{
-                user.email }}
-            </li>
-        </ul>
-    </div>
-
-</form>
+</div>
